# pharma_bot

./: .gitignore  CMakeLists.txt  MOTOR_SETUP.md  README.md  frames_2025-08-21_10.25.34.gv  frames_2025-08-21_15.28.07.gv  package.xml  requirements.txt  rviz_setup_guide.txt  setup.py  sim_launch_with_teleop.txt  simple_robot_launch_instructions.txt
config/: gz_bridge.yaml  mapper_params_online_async.yaml  motor_driver_params.yaml  my_controllers.yaml  pharma_bot.rviz  slam.rviz  slam2.rviz  twist_mux.yaml
description/: ros2_control.xacro
docs/: CMakeLists.txt  README.md  SESSION_SUMMARY_AND_TODO.md  real_robot_launch_with_teleop.txt  sim_launch_with_teleop.txt  simple_robot_launch_instructions.txt  slam_mapping_localisation.md
launch/: ball_tracker.launch.py  interactive_motor_test.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_sim_simple.launch.py  localization_launch.py  motor_test.launch.py  navigation_launch.py  okdo_lidar.launch.py  online_async_launch.py  pi_hardware.launch.py  real_robot_pi.launch.py  real_robot_viz.launch.py  rpi_motor_driver.launch.py  rsp.launch.py  slam_hardware.launch.py
log/: latest_list
maps/: README.md  gazebo_map_save.pgm  gazebo_map_save.yaml  gazebo_map_serial.data
resource/: pharma_bot
scripts/: interactive_motor_test.py  motor_encoder_test.py  rpi_motor_driver.py  start_autonomous_sim.sh  start_dev.sh  start_pi.sh
worlds/: gazebo_cor.world.sdf
